add css and default img

--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-a{text-decoration: none;}
+a{
+  text-decoration: none;}
+li{
+  list-style:circle;
+  margin: 2px;
+}
